--- a/Solução Airbnb Rio.ipynb
+++ b/Solução Airbnb Rio.ipynb
@@ -59,16 +59,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import pathlib"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Consolidar Base de Dados"
+    "### Agora vamos importar as bases de dados\n",
+    "\n",
+    "Para isso, vamos criar um dicionário com os 3 primeiros caracteres com os nomes dos meses e o número correspondente daquele mês.\n",
+    "\n",
+    "Para cada arquivo da base de dados a gente vai importar o arquivo e criar uma coluna na base de dados com o mês e o ano de cada informação"
    ]
   },
   {
@@ -76,7 +83,75 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "meses = {'jan': 1, 'fev': 2, 'mar': 3, 'abr': 4, 'mai': 5, 'jun': 6, 'jul': 7, 'ago': 8, 'set': 9, 'out': 10, 'nov': 11, 'dez': 12}\n",
+    "\n",
+    "caminho_bases = pathlib.Path('dataset')\n",
+    "\n",
+    "base_airbnb = pd.DataFrame()\n",
+    "\n",
+    "# Usando pd.concat ao invés de append\n",
+    "dataframes = []\n",
+    "\n",
+    "for arquivo in caminho_bases.iterdir():\n",
+    "    mes = meses[arquivo.name[:3]]\n",
+    "    ano = arquivo.name[-8:]\n",
+    "    ano = int(ano.replace(\".csv\", \"\"))\n",
+    "    df = pd.read_csv(caminho_bases / arquivo.name)\n",
+    "    df['ano'] = ano\n",
+    "    df['mes'] = mes\n",
+    "    dataframes.append(df)\n",
+    "\n",
+    "base_airbnb = pd.concat(dataframes, ignore_index=True)\n",
+    "\n",
+    "display(base_airbnb)\n",
+    "\n",
+    "# ------------------ codigo auternativo\n",
+    "\n",
+    "# caminho_bases = pathlib.Path('dataset')\n",
+    "           # # Usando o método glob para encontrar todos os arquivos CSV\n",
+    "# arquivos_csv = caminho_bases.glob('*.csv')\n",
+    "           # # Concatenando diretamente todos os arquivos CSV\n",
+    "# base_airbnb = pd.concat((pd.read_csv(arquivo) for arquivo in arquivos_csv), ignore_index=True)\n",
+    "\n",
+    "# display(base_airbnb)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Agora vamos começar os tratamentos\n",
+    "\n",
+    "- Como temos muitas colunas, nosso modelo pode acabar ficando muito lento.\n",
+    "- Além disso, uma análise rápida permite ver que várias colunas não são necessárias para o nosso modelo de previsão, por isso, vamos excluir algumas colunas da nossa base\n",
+    "- Tipos de colunas que vamos excluir:\n",
+    "    1. IDs, Links e informações não relevantes para o modelo\n",
+    "    2. Colunas repetidas ou extremamente parecidas com outra (que dão a mesma informação para o modelo. Ex: Data x Ano/Mês\n",
+    "    3. Colunas preenchidas com texto livre -> Não rodaremos nenhuma análise de palavras ou algo do tipo\n",
+    "    4. Colunas em que todos ou quase todos os valores são iguais\n",
+    "    \n",
+    "- Para isso, vamos criar um arquivo em excel com os 1.000 primeiros registros e fazer uma análise qualitativa, olhando as colunas e identificando quais são desnecessárias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['id', 'listing_url', 'scrape_id', 'last_scraped', 'name', 'summary', 'space', 'description', 'experiences_offered', 'neighborhood_overview', 'notes', 'transit', 'access', 'interaction', 'house_rules', 'thumbnail_url', 'medium_url', 'picture_url', 'xl_picture_url', 'host_id', 'host_url', 'host_name', 'host_since', 'host_location', 'host_about', 'host_response_time', 'host_response_rate', 'host_acceptance_rate', 'host_is_superhost', 'host_thumbnail_url', 'host_picture_url', 'host_neighbourhood', 'host_listings_count', 'host_total_listings_count', 'host_verifications', 'host_has_profile_pic', 'host_identity_verified', 'street', 'neighbourhood', 'neighbourhood_cleansed', 'neighbourhood_group_cleansed', 'city', 'state', 'zipcode', 'market', 'smart_location', 'country_code', 'country', 'latitude', 'longitude', 'is_location_exact', 'property_type', 'room_type', 'accommodates', 'bathrooms', 'bedrooms', 'beds', 'bed_type', 'amenities', 'square_feet', 'price', 'weekly_price', 'monthly_price', 'security_deposit', 'cleaning_fee', 'guests_included', 'extra_people', 'minimum_nights', 'maximum_nights', 'calendar_updated', 'has_availability', 'availability_30', 'availability_60', 'availability_90', 'availability_365', 'calendar_last_scraped', 'number_of_reviews', 'first_review', 'last_review', 'review_scores_rating', 'review_scores_accuracy', 'review_scores_cleanliness', 'review_scores_checkin', 'review_scores_communication', 'review_scores_location', 'review_scores_value', 'requires_license', 'license', 'jurisdiction_names', 'instant_bookable', 'is_business_travel_ready', 'cancellation_policy', 'require_guest_profile_picture', 'require_guest_phone_verification', 'calculated_host_listings_count', 'reviews_per_month', 'ano', 'mes', 'minimum_minimum_nights', 'maximum_minimum_nights', 'minimum_maximum_nights', 'maximum_maximum_nights', 'minimum_nights_avg_ntm', 'maximum_nights_avg_ntm', 'number_of_reviews_ltm', 'calculated_host_listings_count_entire_homes', 'calculated_host_listings_count_private_rooms', 'calculated_host_listings_count_shared_rooms']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(base_airbnb.columns))\n",
+    "base_airbnb.head(1000).to_csv('primeiros_registros.csv', sep=';')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
